* New: Show enemy wounds and ally health in mechwarrior names.
* New: Apply damage reduction in weapon panel and customise display format.
* New: Set nameplate text colour.
* New: Press F1 to F4 to select player mech.
* New: Hold Alt to enable friendly fire (non-Multi-Target).
* New: Show rare weapon properties and weapon range in meters in weapon mouseover.
* New: Show short range in hit modifier breakdown.
* Mod: ShortPilotHint now hides HP by default, to avoid line wrapping on elite mechwarriors.
* Mod: ShowNumericInfo no longer shows pc movement points during enemy attacks.
* Fix: FacingMarkerEnemyColors not applied when FacingMarkerPlayerColors is empty.
* Fix: NPE when FacingMarkerPlayerColors is non-empty but FacingMarkerEnemyColors is empty.
* Fix: FloatingArmorColours no longer applies to target panel.
* Fix: Geothermal and Radiation Field are now factored in heat preview fix.
* Fix: Range meters in hit modifier list no longer show decimal.
* Fix: FixPaperDollRearStructure now works in campaign, without going through combat first.

2018-09-15 AIM Version 2.5 for BATTLETECH 1.2.0

* New: Fix heat prediction on move/jump/sprint preview.
* New: Show distance number in target panel, and movement point in selection panel.
* New: Show mechwarrior stats in one-line mouseover hint, instead of only HP.
* New: Variable melee height difference limit by mech class.
* New: Configure friends' and foes' crit multiplier.
* New: Vehicles and Turrets may now be crit'ed and killed by ammo explosions.
* New: Critical hits now follows damage transfer.
* New: Critical hits rates and cap may be set.
* New: Critical hits may optionally happens through armour.
* New: Critical hits may optionally ignore destroyed component and space.
* New: Critical hits may optionally be transferred inward when there is nothing to crit.
* New: Critical hits may optionally be rolled until there is no more crit chance.
* New: Prevent critical hit on locations with intact structure.