@@ -9,7 +9,8 @@ CHANGE LOG
 * New: Press F1 to F4 to select player mech.
 * New: Hold Alt to enable friendly fire (non-Multi-Target).
 * New: Show rare weapon properties and weapon range in meters in weapon mouseover.
-* New: Show short range in hit modifier breakdown.
+* New: Show terrain description on danger terrains.
+* New: (Optional) Show short range in hit modifier breakdown.
 * Mod: ShortPilotHint now hides HP by default, to avoid line wrapping on elite mechwarriors.
 * Mod: ShowNumericInfo no longer shows pc movement points during enemy attacks.
 * Fix: FacingMarkerEnemyColors not applied when FacingMarkerPlayerColors is empty.
